# weather_modbus_converter-addon

./: .gitignore  README.md  repository.yaml
ws90lp_modbus_bridge/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  config.yaml  pyproject.toml  requirements.txt  run.sh
ws90lp_modbus_bridge/ws90lp_bridge/: __init__.py  cli.py  config.py  dashboard.py  decode.py  ecowitt.py  modbus.py  mqtt.py  payloads.py  rain.py  service.py  web_ui.py  webhooks.py
